# yail

./: CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  CREDITS.md  INSTALL.md  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml  release.yml
cmake/: yailConfig.cmake.in
examples/: loader.cpp  remote_loader.cpp  test_dll.cpp  test_exe.cpp  test_winexe.cpp
include/yail/: yail.hpp
include/yail/detail/: native_loader.hpp  pe.hpp  wow64.hpp
source/: pe.cpp  shellcode.cpp  wow64.cpp  yail.cpp
tools/: generate_shellcode.cpp
